public/scss/title.scss
@use 'variables';

.sidenav {
    position: fixed;
    box-sizing: border-box;
    background-color: variables.$titleBase;
    border-right: 1px solid #472957;
    width: 80px;
    height: 100vh;
    z-index: 100;
}

.navbar-icon {
    box-sizing: border-box;
    background-color: #513886;
    width: 80px;
    height: 80px;
}

.aboutme-text {
    font-weight: 400;
    font-size: 1.3em;
    color: variables.$titleText;
}

.linkedin-icon {
    position: absolute;
    bottom: 0;
    box-sizing: border-box;
    background-color: #513886;
    width: 80px;
    height: 80px;
}

.main {
    margin-left: 80px;
    background-color: variables.$titleBase;
    height: 100vh;
    display: flex;
    align-items: center;
}

.content-grid {
    margin-left: 30px;
    width: 100%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(5, 1fr);
    grid-column-gap: 0px;
    grid-row-gap: 0px;
}
    
.switch { grid-area: 2 / 1 / 3 / 2; }
#intro-header { grid-area: 3 / 1 / 4 / 3; }
#intro-description { grid-area: 4 / 1 / 5 / 3; }
.img-container { grid-area: 1 / 3 / 6 / 4; }

.img-container {
    background-color: #513886;
    border-radius: 40px 0px 0px 40px;
}

/* Toggle button for dark/light themes */
.switch {
    position: relative;
    display: inline-block;
    width: 140px;
    height: 65px;
  }
  
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: variables.$toggle;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 55px;
    width: 55px;
    left: 6px;
    bottom: 5px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2);

  }
  
  input:checked + .slider {
    background-color: variables.$tagOrange;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(74px);
    -ms-transform: translateX(74px);
    transform: translateX(74px);
  }
  
  .slider.round {
    border-radius: 35px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

